--- a/index.html
+++ b/index.html
@@ -73,6 +73,50 @@
 
   <div class="position-absolute" id="borda">borda</div>
 
+  <div class="container-fluid position-absolute pt-5" id="pagina2">
+    <h1 id="h1">Lipsum Dolor</h1>
+    <p>Lipsum Dolor</p>
+    <div class="d-md-inline-flex" >
+      <div class="col-sm-12 col-md-4 mt-5 " >
+        <div class="container-fluid colunas p-5">
+            <h4>Lorem ipsum sit dolor</h4>
+            <img class="p-5" src="coluna1.png">
+            <p class="lead">Lorem ipsum dolor sit amet, 
+              consectetur adipisicing elit. Quibusdam sed 
+              praesentium libero quia debitis, accusamus 
+              dolore. Architecto delectus laboriosam 
+              consectetur beatae ut ratione ad magnam at 
+              voluptas totam, dicta quas.</p>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mt-5 ">
+        <div class="container-fluid colunas p-5">
+          <h4 >Lorem ipsum sit dolor</h4>
+          <img class="p-5" src="coluna2.png">
+          <p class="lead">Lorem ipsum dolor sit amet, 
+            consectetur adipisicing elit. Quibusdam sed 
+            praesentium libero quia debitis, accusamus 
+            dolore. Architecto delectus laboriosam 
+            consectetur beatae ut ratione ad magnam at 
+            voluptas totam, dicta quas.</p>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mt-5 mb-5 colunas">
+        <div class="container-fluid colunas p-5">
+          <h4>Lorem ipsum sit dolor</h4>
+          <img class="p-5" src="coluna3.png">
+          <p class="lead">Lorem ipsum dolor sit amet, 
+            consectetur adipisicing elit. Quibusdam sed 
+            praesentium libero quia debitis, accusamus 
+            dolore. Architecto delectus laboriosam 
+            consectetur beatae ut ratione ad magnam at 
+            voluptas totam, dicta quas.</p>
+        </div>
+      </div>
+      
+    </div>
+    
+  </div>
   
 
 
