--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             voluptas totam, dicta quas.</p>
         </div>
       </div>
-      <div class="col-sm-12 col-md-4 mt-5 mb-5 colunas">
+      <div class="col-sm-12 col-md-4 mt-5 mb-5 ">
         <div class="container-fluid colunas p-5">
           <h4>Lorem ipsum sit dolor</h4>
           <img class="p-5" src="coluna3.png">
