animação e atualizações na pagina 2

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <hr class="w-50 ml-1">
       <div class="col-12">
-        <p class="lead w-50">Lorem ipsum dolor, sit amet consectetur
+        <p class="lead w-50 d-none d-sm-block">Lorem ipsum dolor, sit amet consectetur
           adipisicing elit. Nostrum, nam, magni consequatur quaerat incidunt
           nulla vitae temporibus corporis optio tenetur ex dolores eos molestiae
           repellat commodi. Culpa voluptate obcaecati nobis?</p>
@@ -77,7 +77,7 @@
     <h1 id="h1">Lipsum Dolor</h1>
     <p>Lipsum Dolor</p>
     <div class="d-md-inline-flex" >
-      <div class="col-sm-12 col-md-4 mt-5 " >
+      <div class="w-sm-100 col-sm-12 col-md-4 mt-5 hvr-grow-shadow" >
         <div class="container-fluid colunas p-5">
             <h4>Lorem ipsum sit dolor</h4>
             <img class="p-5" src="coluna1.png">
@@ -89,7 +89,7 @@
               voluptas totam, dicta quas.</p>
         </div>
       </div>
-      <div class="col-sm-12 col-md-4 mt-5 ">
+      <div class="col-sm-12 col-md-4 mt-5 hvr-grow-shadow">
         <div class="container-fluid colunas p-5">
           <h4 >Lorem ipsum sit dolor</h4>
           <img class="p-5" src="coluna2.png">
@@ -101,7 +101,7 @@
             voluptas totam, dicta quas.</p>
         </div>
       </div>
-      <div class="col-sm-12 col-md-4 mt-5 mb-5 ">
+      <div class="col-sm-12 col-md-4 mt-5 mb-5 hvr-grow-shadow">
         <div class="container-fluid colunas p-5">
           <h4>Lorem ipsum sit dolor</h4>
           <img class="p-5" src="coluna3.png">
