--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+  
+  
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+    crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   <title>Hello, world!</title>
 </head>
@@ -61,7 +65,10 @@
     <div class="container-fluid" id="btnexpandir">
       <div class="col-12 mt-5">
         <button type="button" class="btn btn-primary btn-lg">EXPANDIR MEU NEGÓCIO
-          <i class="material-icons" id="icon" >arrow_downward</i>
+          <a href="#" class="hvr-icon-down">
+            <i class="fa fa-arrow-circle-o-down hvr-icon"></i>
+          </a>
+         
         </button>
       </div>
     </div>
