--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     <img src="iceberg.png">
   </div>
 
-  <div class="position-absolute" id="borda">borda</div>
+  <div class="position-absolute" id="borda">
+    <img src="elipse.png">
+  </div>
 
   <div class="container-fluid position-absolute pt-5" id="pagina2">
     <h1 id="h1">Lipsum Dolor</h1>
