--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ">
                       <li class="nav-item active">
-                        <a class="nav-link ml-5" id="first" href="#">Home</a>
+                        <a class="nav-link ml-md-5" id="first" href="#">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link pl-2" href="#">Sobre</a>
@@ -56,7 +56,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis sint nam, cupiditate deleniti
                 nulla earum iusto laboriosam aliquid reprehenderit inventore. Repudiandae enim quisquam distinctio!
                 Veniam sapiente tenetur quibusdam dolor.</p>
-            <a href="#pag2" class="btn btn-primary">EXPANDIR MEU NEGÓCIO <i class="far fa-arrow-alt-circle-down"></i></a>
+            <a href="#pag2" class="btn btn-primary" id="btnExpandir">EXPANDIR MEU NEGÓCIO <i class="far fa-arrow-alt-circle-down"></i></a>
         </div>
     </section>
 
