--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="nav-link pl-2" href="#">Sobre</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link pl-2" href="#">Consultoria</a>
+                        <a class="nav-link pl-2" href="consultoria.html">Consultoria</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link pl-2" href="#">Contato</a>
@@ -52,7 +52,7 @@
                 </div>
               </nav>
 
-            <h1>Gestão de Marketing Estratégica</h1>
+            <h1>Gestão de Marketing Estratégico</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis sint nam, cupiditate deleniti
                 nulla earum iusto laboriosam aliquid reprehenderit inventore. Repudiandae enim quisquam distinctio!
                 Veniam sapiente tenetur quibusdam dolor.</p>
