Novas páginas, sobre e contato. Alterações em outras páginas

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                         <a class="nav-link ml-md-5" id="first" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link pl-2" href="#">Sobre</a>
+                        <a class="nav-link pl-2" href="sobre.html">Sobre</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link pl-2" href="consultoria.html">Consultoria</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link pl-2" href="#">Contato</a>
+                        <a class="nav-link pl-2" href="contato.html">Contato</a>
                       </li>
                     
                     </ul>
@@ -293,6 +293,8 @@
 
         
     </section>
+
+
 
     <section class="pag5">
         <div class="row">
