--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                       <li class="nav-item">
                         <a class="nav-link pl-2" href="sobre.html">Sobre</a>
                       </li>
+                      <li class="nav-item ">
+                        <a class="nav-link pl-2" href="#pag3">Serviços</a>
+                      </li>
                       <li class="nav-item">
                         <a class="nav-link pl-2" href="consultoria.html">Consultoria</a>
                       </li>
@@ -78,7 +81,7 @@
         </div>
     </section>
 
-    <section class="pag3">
+    <section class="pag3" id="pag3">
         <h2>Nossos serviços</h2>
         <div class="blocos">
             <div class="row">
