--- a/sobre.html
+++ b/sobre.html
@@ -38,6 +38,9 @@
                         <a class="nav-link pl-2" href="#">Sobre</a>
                       </li>
                       <li class="nav-item ">
+                        <a class="nav-link pl-2" href="#">Serviços</a>
+                      </li>
+                      <li class="nav-item ">
                         <a class="nav-link pl-2" href="consultoria.html">Consultoria</a>
                       </li>
                       <li class="nav-item">
