--- a/consultoria.html
+++ b/consultoria.html
@@ -37,6 +37,9 @@
                       <li class="nav-item">
                         <a class="nav-link pl-2" href="sobre.html">Sobre</a>
                       </li>
+                      <li class="nav-item ">
+                        <a class="nav-link pl-2" href="index.html#pag3">Serviços</a>
+                      </li>
                       <li class="nav-item active">
                         <a class="nav-link pl-2" href="#">Consultoria</a>
                       </li>
