--- a/contato.html
+++ b/contato.html
@@ -38,6 +38,9 @@
                         <a class="nav-link pl-2" href="sobre.html">Sobre</a>
                       </li>
                       <li class="nav-item ">
+                        <a class="nav-link pl-2" href="index.html#pag3">Serviços</a>
+                      </li>
+                      <li class="nav-item ">
                         <a class="nav-link pl-2" href="consultoria.html">Consultoria</a>
                       </li>
                       <li class="nav-item active">
