--- a/sobre.html
+++ b/sobre.html
@@ -38,7 +38,7 @@
                         <a class="nav-link pl-2" href="#">Sobre</a>
                       </li>
                       <li class="nav-item ">
-                        <a class="nav-link pl-2" href="#">Serviços</a>
+                        <a class="nav-link pl-2" href="index.html#pag3">Serviços</a>
                       </li>
                       <li class="nav-item ">
                         <a class="nav-link pl-2" href="consultoria.html">Consultoria</a>
