ajuste de textos reais

--- a/index.html
+++ b/index.html
@@ -55,29 +55,25 @@
                 </div>
               </nav>
 
-            <h1>Gestão de Marketing Estratégico</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis sint nam, cupiditate deleniti
-                nulla earum iusto laboriosam aliquid reprehenderit inventore. Repudiandae enim quisquam distinctio!
-                Veniam sapiente tenetur quibusdam dolor.</p>
+            <h1>Gestão de <br>Marketing Estratégico</h1>
+            <p>Seja bem-vindo(a) ao site da Iceberg Content. Entenda como nossos serviços podem alavancar seu negócio e fazê-lo emergir nas possibilidades. (Se agasalhe, pois o clima vai esfriar!)</p>
             <a href="#pag2" class="btn btn-primary" id="btnExpandir">EXPANDIR MEU NEGÓCIO <i class="far fa-arrow-alt-circle-down"></i></a>
         </div>
     </section>
 
     <section class="pag2" id="pag2">
-        <div class="quadro embaixo">
+        <div class="quadro embaixo" id="quadro1">
             <h4>Crie Autoridade Digital</h4>
-            <p>Solidifique-se no mercado digital aumentando a consideração de sua marca e dos serviços oferecidos por
-                ela.</p>
+            <p>Solidifique-se no mercado digital, aumente a confiabilidade de sua marca e, consequentemente, dos produtos e serviços oferecidos por ela.
+            </p>
         </div>
-        <div class="quadro">
-            <h4>Se torne maiss atrativo</h4>
-            <p>Com sistemas e plataformas orientados para o seu negócio, solucione os principais problemas de seus
-                clientes.</p>
+        <div class="quadro" id="quadro2">
+            <h4>Torne-se mais atrativo</h4>
+            <p>Solucione seus principais problemas através de sistemas e plataformas orientadas especialmente para cada empresa.</p>
         </div>
-        <div class="quadro embaixo">
+        <div class="quadro embaixo" id="quadro3">
             <h4>Acelere o ciclo de seu produto</h4>
-            <p>Através das gestões de canais de mídia e de identidade otimizar os processos técnicos e operacionais
-                relacionados ao contato </p>
+            <p>Otimize processos técnicos e operacionais por meio da gestão de canais de mídias e da identidade de marca.            </p>
         </div>
     </section>
 
