--- a/sobre.html
+++ b/sobre.html
@@ -61,39 +61,149 @@
         </div>
 
         <section class="pg2">
-          <div>
-            <h1>Sobre nós</h1>
-            <div class="pg2-1">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis quam enim aliquid 
-              facere est beatae harum! Corrupti, praesentium. Tempore blanditiis consectetur numquam 
-              repudiandae saepe, adipisci voluptatum eum totam beatae ea expedita, facilis natus, quam 
-            </p>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis quam enim aliquid 
-                facere est beatae harum! Corrupti, praesentium. Tempore blanditiis consectetur numquam 
-                repudiandae saepe, adipisci voluptatum eum totam beatae ea expedita, facilis natus, quam 
-                </p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis quam enim aliquid 
-                  facere est beatae harum! Corrupti, praesentium. Tempore blanditiis consectetur numquam 
-                  repudiandae saepe, adipisci voluptatum eum totam beatae ea expedita, facilis natus, quam 
-                  </p>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="row">
+                  <div class="col-12">
+                    <h2>Sobre nós</h2>
+                    <p>A Iceberg Content é uma empresa de gestão de marketing estratégico e integral que viabiliza sempre atingir os melhores resultados possíveis e, 
+                      assim, superar as expectativas. Para nós, o problema deve ser resolvido de forma estrutural, por isso, prezamos sempre por uma análise detalhada 
+                      das empresas dos nossos clientes.</p>
+                  </div>
+                </div>
+                <div class="row espaco">
+                  <div class="col-12">
+                    <h2>Por que nos escolher?</h2>
+                    <p>Porque a Iceberg é completa, por isso, através dos nossos métodos de análises e proposições de ações, somos capazes de entregar um serviço único, de qualidade, 
+                      digno e moral, a custo justo e que preza pela segurança, pelo atendimento primoroso e a obtenção de resultados.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 lado" >
+                <div class="row">
+                  <div class="col-3 lado2"> Teste</div>
+                  <div class="col-9">
+                <img src="sobrenos.jpg" id="sobrenos" alt="">
+                  </div>
+                </div>
+              </div>
+
+
+
+            </div>
+          </section>
+
+          <section class="pg3">
+            <div class="row">
+              <div class="col-12"></div>
+            <h2 > Nossa equipe</h2>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3 ">
+                <div class="caixinhas caixa">
+                  <div class="foto"></div>
+                <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>               
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                  <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                  <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>               
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                  <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                  <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                  <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                  <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>               
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                  <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="caixinhas">
+                  <img src="" alt="">
+                  <h6>Nome</h6>
+                <p>Cargo</p>
+                <p>Mail</p>
+                </div>
+              </div>
             </div>
             
-          </div>
-      </section>
 
-        <section class="pg3">
-          <div class="row">
-            <div class="col-md-6">
-            <h1>Por que nos escolher?</h1>
-            </div>
-            <div class="col-md-6">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis quam enim aliquid 
-                facere est beatae harum! Corrupti, praesentium. Tempore blanditiis consectetur numquam 
-                repudiandae saepe, adipisci voluptatum eum totam beatae ea expedita, facilis natus, quam 
-              </p>
-            </div>
-          </div>
-      </section>
+          </section>
     </section>
 
     <section>
