--- a/contato.html
+++ b/contato.html
@@ -95,32 +95,49 @@
     </section>
 
     <section>
-        <footer>
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="logo.png" alt="">
-                </div>
-                <div class="col-md-6">
-                    <div>
-                        <h4>Lorem</h4>
-                        <p>Lorem</p>
-                        <p>Lorem</p>
-                        <p>Lorem</p>
-                        <ul>
-                            <li><a href="#"><i class='fab fa-instagram' style='font-size:24px'></i></a></li>
-                            <li><a href="#"><i class='fab fa-facebook-square' style='font-size:24px'></i></a></li>
-                            <li><a href="#"><i class='fab fa-linkedin' style='font-size:24px'></i></a></li>
-                            <li><a href="#"><i class='fab fa-whatsapp' style='font-size:24px'></i></a></li>
-                        </ul>
-  
-                    </div>
-                </div>
-                
+      <footer>
+        <div class="row">
+            <div class="col-md-2">
+                <img src="logo.png" alt="">
             </div>
-  
-  
-  
-        </footer>
+            <div class="col-md-5" style="font-size: 18px;">
+                <p>A Iceberg Content é uma empresa de gestão de marketing estratégico e integral que 
+                    viabiliza sempre atingir os melhores resultados possíveis e, assim, superar as expectativas.</p>
+            </div>
+            <div class="col-md-5">
+                <div>
+                    <ul class="listanav">
+                        <li >
+                            <a href="index.html">Home</a>
+                          </li>
+                          <li >
+                            <a  href="sobre.html">Sobre</a>
+                          </li>
+                          <li >
+                            <a  href="index.html#pag3">Serviços</a>
+                          </li>
+                          <li >
+                            <a href="consultoria.html">Consultoria</a>
+                          </li>
+                          <li >
+                            <a href="#">Contato</a>
+                          </li>
+                    </ul>
+                    <ul>
+                        <li><a href="#"><i class='fab fa-instagram' style='font-size:24px'></i></a></li>
+                        <li><a href="#"><i class='fab fa-facebook-square' style='font-size:24px'></i></a></li>
+                        <li><a href="#"><i class='fab fa-linkedin' style='font-size:24px'></i></a></li>
+                        <li><a href="#"><i class='fab fa-whatsapp' style='font-size:24px'></i></a></li>
+                    </ul>
+
+                </div>
+            </div>
+            
+        </div>
+
+
+
+    </footer>
     </section>
 
    
