--- a/index.html
+++ b/index.html
@@ -340,15 +340,32 @@
     <section>
         <footer>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-2">
                     <img src="logo.png" alt="">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5" style="font-size: 18px;">
+                    <p>A Iceberg Content é uma empresa de gestão de marketing estratégico e integral que 
+                        viabiliza sempre atingir os melhores resultados possíveis e, assim, superar as expectativas.</p>
+                </div>
+                <div class="col-md-5">
                     <div>
-                        <h4>Lorem</h4>
-                        <p>Lorem</p>
-                        <p>Lorem</p>
-                        <p>Lorem</p>
+                        <ul class="listanav">
+                            <li >
+                                <a href="#">Home</a>
+                              </li>
+                              <li >
+                                <a  href="sobre.html">Sobre</a>
+                              </li>
+                              <li >
+                                <a  href="#pag3">Serviços</a>
+                              </li>
+                              <li >
+                                <a href="consultoria.html">Consultoria</a>
+                              </li>
+                              <li >
+                                <a href="contato.html">Contato</a>
+                              </li>
+                        </ul>
                         <ul>
                             <li><a href="#"><i class='fab fa-instagram' style='font-size:24px'></i></a></li>
                             <li><a href="#"><i class='fab fa-facebook-square' style='font-size:24px'></i></a></li>
