--- a/consultoria.html
+++ b/consultoria.html
@@ -56,15 +56,15 @@
               </nav>
 
               
-              <section >
-                <div class="row">
-                  <div class="col-3">
+              <section class="pag2" >
+                <div class="row ">
+                  <div class="col-md-3 mt-5 texto">
                     <h2>Faça uma consultoria</h2>
                     <p>Se você está procurando por uma solução completa e estrutural de marketing, você chegou ao lugar certo! Nós da Iceberg estamos 
                       dispostos a fazer parte da história da sua empresa e fazê-la aflorar em um moceano de possibilidades. Se interessou? Converse com a 
-                      gente. O que você viu até agora foi só a ponta do Iceberg.</p>
+                      gente.<br> O que você viu até agora foi só a ponta do Iceberg.</p>
                   </div>
-                  <div class="col-9">
+                  <div class="col-md-9">
                     <div class="container">
                       <form action="https://formspree.io/f/mjvjwppa" method="POST" id="my-form">
                   
