ajuste pag sobre

--- a/sobre.html
+++ b/sobre.html
@@ -62,7 +62,7 @@
 
         <section class="pg2">
                 <div class="row">
-                  <div class="col-7">
+                  <div class="col-md-7">
                     
                     <div style="width: 70%; height: 70%; padding-left: 15%; " >
                       <h2>Sobre nós</h2>
@@ -72,15 +72,15 @@
                     </div>
                     
                   </div>
-                  <div class="col-5">
+                  <div class="col-md-5">
                     <img src="teste1-01.png" style="width: 70%; height: 70%;" alt="">
                   </div>
                 </div>
                 <div class="row ">
-                  <div class="col-5">
+                  <div class="col-md-5">
                     <img src="teste1-01.png" style="width: 70%; height: 70%;" alt="">
                   </div>
-                  <div class="col-7">
+                  <div class="col-md-7">
                     <div style="width: 70%; height: 70%; padding-left: 15%; " >
                       <h2>Por que nos escolher?</h2>
                       <p>Porque a Iceberg é completa, por isso, através dos nossos métodos de análises e proposições de ações, somos capazes de entregar um serviço único, de qualidade, 
