--- a/consultoria.html
+++ b/consultoria.html
@@ -58,7 +58,7 @@
               
               <section class="pag2" >
                 <div class="row ">
-                  <div class="col-md-3 mt-5 texto">
+                  <div class="col-md-3 mt-md-5 texto">
                     <h2>Faça uma consultoria</h2>
                     <p>Se você está procurando por uma solução completa e estrutural de marketing, você chegou ao lugar certo! Nós da Iceberg estamos 
                       dispostos a fazer parte da história da sua empresa e fazê-la aflorar em um moceano de possibilidades. Se interessou? Converse com a 
