--- a/sobre.html
+++ b/sobre.html
@@ -174,7 +174,7 @@
                 <div class="content">
                   <div class="imgBx"> <img src="imagem.png" alt=""></div>
                   <div class="contentBx">
-                    <h3>Tiffany Crispim <br> <span>Analista de Mídia Social</span> <br> <span>tiffany@icebergcontent.com.br</span></h3>
+                    <h3>Tiffany Crispim <br> <span>Analista de Mídia Social</span> <br><br> <span>tiffany@icebergcontent.com.br</span></h3>
                   </div>
                 </div>
               </div>
@@ -194,7 +194,7 @@
                 <div class="content">
                   <div class="imgBx"> <img src="imagem.png" alt=""></div>
                   <div class="contentBx">
-                    <h3>Calil Martins <br> <span>Analista de Marketing</span> <br> <span>calil@icebergcontent.com.br</span></h3>
+                    <h3>Calil Martins <br> <span>Analista de Marketing</span> <br> <br><span>calil@icebergcontent.com.br</span></h3>
                   </div>
                 </div>
               </div>
@@ -217,7 +217,7 @@
                 <div class="content">
                   <div class="imgBx"> <img src="imagem.png" alt=""></div>
                   <div class="contentBx">
-              <h3>Bruno Bitencourt <br> <span>Gestor de Tráfego</span> <br> <span>bruno@icebergcontent.com.br</span></h3>
+              <h3>Bruno Bitencourt <br> <span>Gestor de Tráfego</span> <br> <br><span>bruno@icebergcontent.com.br</span></h3>
                   </div>
                 </div>
               </div>
@@ -238,7 +238,7 @@
           <div class="content">
             <div class="imgBx"> <img src="imagem.png" alt=""></div>
             <div class="contentBx">
-              <h3>Bino <br> <span>Assistente de Marketing</span> <br> <span>bino@icebergcontent.com.br</span></h3>
+              <h3>Bino <br> <span>Assistente de Marketing</span> <br> <br><span>bino@icebergcontent.com.br</span></h3>
 
             </div>
           </div>
